fixed spacing between multiple button elements

--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,10 @@ body {
 
 html {
   background: 
-    /* top, transparent red, faked with gradient */ 
     linear-gradient(
       rgba(255, 255, 255, 0.90), 
       rgba(255, 255, 255, 0.90)
     ),
-    /* bottom, image */
     url('./images/background.jpg') right;
     height: 100vh;
 }
@@ -57,6 +55,10 @@ html {
   padding-top: calc(0.375em - 1px);
   text-align: center;
   white-space: nowrap;
+}
+
+.button + .button {
+  margin-left: 1em;
 }
 
 .multi-line {
